--- a/src/app/chartEditor/chartEditor.scss
+++ b/src/app/chartEditor/chartEditor.scss
@@ -149,18 +149,33 @@
                 ul{
                     margin: 0px;
                     padding: 0px;
-                    column-count: 4;
+                    column-count: 3;
+                    display: flex;
+                    flex-wrap: wrap;
                     li{
                         display: block;
                         font-size: 14px;
                         white-space: nowrap;
                         overflow: hidden;
                         text-overflow: ellipsis;
+                        width: 33.33%;
                         span{
                             padding:2px 0;
                         }
                     }
                 }
+            }
+            .selectValue.questions-hidden{
+                height: 100px !important;
+                overflow: hidden;
+            }
+            .selectValue.full-questions{
+                height: 130px !important;
+                overflow: auto;
+            }
+            .selectValue.default-questions{
+                height: auto !important;
+                overflow: hidden;
             }
         }
         .MuiIconButton-label{
@@ -185,6 +200,7 @@
         display: flex;
         justify-content: right;
         padding-right: 15px;
+        align-items: center;
         label{
             span{
                 font-size: 12px;
@@ -697,10 +713,7 @@
     border: 2px solid #000;
     background-color: #ccc;
 }
-.charResize {
-    overflow: auto;
-    resize: both;
-}
+
 #highchartsContainer {
     width: 100%;
 }
@@ -744,10 +757,6 @@
 .chartResize {
     border: 2px solid #000;
     background-color: #ccc;
-}
-.charResize {
-    overflow: auto;
-    resize: both;
 }
 #highchartsContainer {
     width: 100%;
@@ -996,34 +1005,36 @@
 
 /*Export Tab Start*/
 .exportTab{
-    .MuiPaper-rounded{
-        &:Hover{
+    .unSelectedChatbox{
+        border:1px solid #E8E8E8;
+        border-radius:4px;
+        &:hover{
             border:1px solid #12988A !important;
+            box-shadow:0px 0px 8px #aeaeae !important;
             .exportOptions{
                 .imgIcon{
                     filter:none;
                 }
             }
         }
-        .exportTitle{
+    }
+    .exportTitle{
+        font-size: 14px;
+        color: #2A2A2A;
+        margin-bottom: 15px !important;
+    }
+    .exportOptions{
+        padding: 25px;
+        text-align: center;
+        .card-title{
+            color:#C4C4C4;
             font-size: 14px;
-            color: #2A2A2A;
-            margin-bottom: 15px !important;
         }
-        .exportOptions{
-            padding: 25px;
-            text-align: center;
-            .card-title{
-                color:#C4C4C4;
-                font-size: 14px;
-            }
-            .imgIcon{
-                margin-bottom: 20px;
-                filter:grayscale(1);
-            }
+        .imgIcon{
+            margin-bottom: 20px;
+            filter:grayscale(1);
         }
     }
-
 }
 /*Export Tab End*/
 
@@ -1069,6 +1080,7 @@
         img{
             margin: 33px 0px 10px auto;
             height: 100px;
+            filter:grayscale(1);
         }
         .card-title{
             font-size: 14px;
@@ -1076,6 +1088,45 @@
             text-align: center;
         }
     }
+    .unSelectedChatbox{
+        border:1px solid #E8E8E8;
+        border-radius:4px;
+        &:hover{
+            border:1px solid #12988A !important;
+            box-shadow:0px 0px 8px #aeaeae !important;
+            border-radius:4px;
+            .exportOptions{
+                img{
+                    filter:none;
+                }
+            }
+        }
+        &:focus{
+            border:1px solid #12988A !important;
+            box-shadow:0px 0px 8px #aeaeae !important;
+            border-radius:4px;
+            .exportOptions{
+                img{
+                    filter:none;
+                }
+            }
+        }
+    }
+    .SelectedChartBox{
+        border:1px solid #12988A !important;
+        box-shadow:0px 0px 8px #aeaeae !important;
+        border-radius:4px;
+        .exportOptions{
+            img{
+                filter:none;
+            }
+        }
+    }
+    //.MuiAccordionDetails-root{
+    //    .MuiPaper-rounded:Hover{
+    //
+    //    }
+    //}
 }
 /*Chart Type Tab End*/
 
@@ -1085,12 +1136,7 @@
 //        overflow:hidden !important;
 //    }
 //}
-.chartBox{
-   #highchartsContainer{
-       overflow:auto !important;
-       height:600px;
-   }
-}
+
 .ChartSection{
     .mostUsedChart{
         display: flex;
@@ -1115,14 +1161,14 @@
     .charResize{
         border:1px solid #F1F1F1;
         border-radius: 4px;
-        padding: 30px;
+        //padding: 30px;
         resize: both;
         overflow: auto;
-        background: url("../../assets/images/charteditor/resize.png");
-        background-position: bottom right;
-        background-repeat: no-repeat;
+        //background: url("../../assets/images/charteditor/resize.png");
+        //background-position: bottom right;
+        //background-repeat: no-repeat;
         margin-bottom: 15px;
-        min-height: 600px;
+        //height:auto !important;
     }
     .downloadPng{
         display: flex;
