Code till 19th may

--- a/src/app/chartEditor/chartEditor.scss
+++ b/src/app/chartEditor/chartEditor.scss
@@ -1218,8 +1218,10 @@
             width: 17px;
             height: 17px;
             border-radius: 50%;
+            cursor: pointer;
         }
         .ColorVariation{
+            cursor: pointer;
             width: 17px;
             height: 17px;
             border-radius: 50%;
