--- a/src/app/chartEditor/chartEditor.scss
+++ b/src/app/chartEditor/chartEditor.scss
@@ -116,7 +116,7 @@
             min-height: 30px;
             padding: 0px;
             .MuiAccordionSummary-content{
-                margin: 0px;
+                margin: 12px 0px;
             }
             .MuiIconButton-edgeEnd{
                 margin-right: 0px;
@@ -140,7 +140,6 @@
             display: block;
             padding: 0px 5px 16px 38px;
             .selectValue{
-                margin-bottom: 10px;
                 -webkit-transition: height 0.5s;
                 -moz-transition: height 0.5s;
                 -ms-transition: height 0.5s;
@@ -228,13 +227,18 @@
         border: 1px solid #F1F1F1 !important;
         border-radius: 4px !important;
         margin-bottom: 10px !important;
-        //padding: 10px;
+        padding: 10px;
         p{
             font-size: 14px;
             color: #585858;
             margin-bottom: 0px;
+            img{
+                margin-right: 10px;
+            }
             span{
                 font-weight: 500;
+                padding-right: 5px;
+                min-width: 40px;
             }
             svg{
                 path{
@@ -247,13 +251,18 @@
             ul{
                 margin: 0px;
                 padding: 0px;
-                column-count: 4;
+                column-count: 3;
+                display: flex;
+                flex-wrap: wrap;
                 li{
                     display: block;
                     font-size: 14px;
                     white-space: nowrap;
                     overflow: hidden;
                     text-overflow: ellipsis;
+                    padding-top: 5px;
+                    padding-bottom: 5px;
+                    width: 33.33%;
                     span{
                         padding:2px 0;
                         svg{
@@ -293,6 +302,7 @@
         -webkit-transition: height 0.5s linear;
         -o-transition: height 0.5s linear;
         transition: height 0.5s linear;
+        margin-bottom: 0px !important;
         .MuiAccordionSummary-expandIcon.Mui-expanded{
             path{
                 color:#5B5B5B;
