--- a/src/app/chartEditor/chartEditor.scss
+++ b/src/app/chartEditor/chartEditor.scss
@@ -302,7 +302,7 @@
         -webkit-transition: height 0.5s linear;
         -o-transition: height 0.5s linear;
         transition: height 0.5s linear;
-        margin-bottom: 0px !important;
+        margin-bottom: 10px !important;
         .MuiAccordionSummary-expandIcon.Mui-expanded{
             path{
                 color:#5B5B5B;
@@ -757,6 +757,15 @@
                     color: #484848 !important;
                     border:1px solid #484848 !important;
                 }
+            }
+        }
+    }
+    #wdr-pivot-view{
+        .wdr-layout-tablet{
+            .wdr-flat-view{
+                min-height: 120px;
+                overflow-x: hidden;
+                overflow-y: auto;
             }
         }
     }
@@ -1310,33 +1319,41 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
-@media screen and (max-width: 1800px) {
+.highcharts-data-label{
+    text{
+        .highcharts-text-outline{
+            fill:transparent !important;
+            stroke:transparent !important;
+        }
+    }
+}
+@media screen and (min-width: 1800px) {
     .series-menu-item{
         max-width:54%;
     }
 }
-@media screen and (max-width: 1600px) {
+@media screen and (min-width: 1600px) {
     .series-menu-item{
         max-width:46%;
     }
 }
-@media screen and (max-width: 1440px) {
+@media screen and (min-width: 1440px) {
     .series-menu-item{
         max-width:500px;
     }
 }
-@media screen and (max-width: 1366px) {
-    .series-menu-item{
-        max-width:40%;
-    }
-}
-@media screen and (max-width: 1280px) {
-    .series-menu-item{
-        max-width:35%;
-    }
-}
-@media screen and (max-width: 1199px) {
-    .series-menu-item{
-        max-width:32%;
-    }
-}
+// @media screen and (min-width: 1366px) {
+//     .series-menu-item{
+//         max-width:40%;
+//     }
+// }
+// @media screen and (min-width: 1280px) {
+//     .series-menu-item{
+//         max-width:35%;
+//     }
+// }
+// @media screen and (min-width: 1199px) {
+//     .series-menu-item{
+//         max-width:32%;
+//     }
+// }
