--- a/src/app/chartEditor/chartEditor.scss
+++ b/src/app/chartEditor/chartEditor.scss
@@ -78,7 +78,7 @@
         border-radius: 2px !important;
         color: #D6D6D6 !important;
         font-size: 14px !important;
-        padding: 0px;
+        padding: 2px 0px 0px 0px;
         height: 26px;
         min-height: 26px;
         width: 90px;
@@ -163,6 +163,9 @@
                         align-items: center;
                         padding-top: 5px;
                         padding-bottom: 5px;
+                        img{
+                            margin-right:3px;
+                        }
                         span{
                             padding:2px 3px 2px 0px;
                         }
@@ -213,6 +216,7 @@
         justify-content: right;
         padding-right: 15px;
         align-items: center;
+        font-size: 14px;
         label{
             span{
                 font-size: 12px;
@@ -225,6 +229,9 @@
                 display: inline;
                 padding: 0px 5px;
             }
+        }
+        img{
+            margin-right: 3px;
         }
     }
     .noAccordian{
@@ -306,7 +313,7 @@
         -webkit-transition: height 0.5s linear;
         -o-transition: height 0.5s linear;
         transition: height 0.5s linear;
-        margin-bottom: 10px !important;
+        margin-bottom: 0px !important;
         .MuiAccordionSummary-expandIcon.Mui-expanded{
             path{
                 color:#5B5B5B;
@@ -320,6 +327,7 @@
         -o-transition: height 0.5s linear;
         transition: height 0.5s linear;
         height:auto;
+        margin-bottom: 10px !important;
         .AccordTitle{
             color: #28B5A6;
             opacity: 1;
@@ -904,6 +912,12 @@
     height: 26px !important;
     padding: 4px;
     font-size: 12px;
+    line-height: 18px;
+}
+#wdr-pivot-view a.wdr-ui-btn-dark{
+    background: #555 !important;
+    color: #fff !important;
+    line-height: 16px !important;
 }
 #wdr-pivot-view a.wdr-ui-btn-dark:hover, #wdr-toolbar-wrapper a.wdr-ui-btn-dark:hover{
     font-weight: 400 !important;
@@ -1361,7 +1375,7 @@
     margin-top: 10px;
 }
 .informative-icon{
-    margin:5px 10px 0px 0px;
+    margin:3px 10px 0px 0px;
     cursor:pointer;
 }
 // .popover{
